ObxParser.cpp
/*
* Copyright 2020 Rochus Keller <mailto:me@rochus-keller.ch>
*
* This file is part of the OBX parser/code model library.
*
* The following is the license that applies to this copy of the
* library. For a license to use the library under conditions
* other than those described here, please email to me@rochus-keller.ch.
*
* GNU General Public License Usage
* This file may be used under the terms of the GNU General Public
* License (GPL) versions 2.0 or 3.0 as published by the Free Software
* Foundation and appearing in the file LICENSE.GPL included in
* the packaging of this file. Please review the following information
* to ensure GNU General Public Licensing requirements will be met:
* http://www.fsf.org/licensing/licenses/info/GPLv2.html and
* http://www.gnu.org/copyleft/gpl.html.
*/

#include "ObxParser.h"
#include "ObErrors.h"
#include <QtDebug>
using namespace Obx;
using namespace Ob;

#define MATCH( tok, msg ) \
    if( d_la == tok ){ \
        next(); \
    }else { \
        syntaxError( msg ); \
        d_cur = Token(); \
    }

struct MaximumErrorCountExceeded {};
struct PrematureEndFound {};

Parser::Parser(Ob::Lexer* l, Ob::Errors* e, QObject *parent) : QObject(parent),d_lex(l),d_errs(e),
    d_errCount(0), d_sync(false)
{

}

Ref<Module> Parser::parse()
{
    d_errCount = 0;
    next();
    try
    {
        switch( d_la )
        {
        case Tok_MODULE:
            next();
            module(false);
            d_mod->d_isExt = d_lex->isEnabledExt();
            break;
        case Tok_DEFINITION:
            next();
            module(true);
            d_mod->d_isExt = d_lex->isEnabledExt();
            break;
        default:
            syntaxError( tr("expecting MODULE or DEFINITION keyword"));
            break;
        }
        if( peek(1) != Tok_Eof )
            d_errs->warning( Errors::Syntax, d_next.toLoc(), tr("ignoring text after module") );
    }catch( const MaximumErrorCountExceeded& )
    {
        if( !d_mod.isNull() )
            d_mod->d_hasErrors = true;
        d_errs->error( Errors::Syntax, d_cur.toLoc(), tr("maximum number of errors exceeded, stop parsing") );
    }catch( const PrematureEndFound& )
    {
        if( !d_mod.isNull() )
            d_mod->d_hasErrors = true;
        d_errs->error( Errors::Syntax, d_next.toLoc(), tr("unexpected end of file found") );
    }

    return d_mod;
}

bool Parser::module(bool definition )
{
    Ref<Module> m = new Module();
    d_mod = m;
    m->d_isDef = definition;
    MATCH( Tok_ident, tr("expecting module name") );
    m->d_hasErrors = !d_cur.isValid();
    m->d_name = d_cur.d_val;
    m->d_loc = d_cur.toRowCol();
    m->d_file = d_cur.d_sourcePath;

    if( d_la == Tok_Lt )
    {
        m->d_metaParams = typeParams();
        for( int i = 0; i < m->d_metaParams.size(); i++ )
        {
            m->d_metaParams[i]->d_slot = i;
            if( !m->add( m->d_metaParams[i].data() ) )
                semanticError(m->d_metaParams[i]->d_loc,tr("name of type parameter must be unique"));
        }
    }

    if( d_la == Tok_Semi )
        next();
    declarationSequence(false, m.data() );
    if( d_la == Tok_BEGIN || d_la == Tok_DO )
    {
        next();
        if( definition )
            semanticError( d_cur.toLoc(), tr("There is no statement sequence in a DEFINITION module") );
        m->d_body = statementSequence(m.data());
        m->d_begin = d_cur.toRowCol();
    }
    MATCH( Tok_END, tr("expecting END keyword at the end of the module") );
    MATCH( Tok_ident, tr("expecting module name after END keyword") );
    if( d_cur.isValid() && d_cur.d_val.constData() != m->d_name.constData() )
        semanticError( d_next.toLoc(), tr("the ident '%1' after the END keyword must be equal "
                          "to the module name").arg(d_next.d_val.constData()));
    else
        m->d_end = d_cur.toRowCol();
    if( d_la == Tok_Dot )
    {
        next();
        return true;
    }else
        return false;
}

Ref<Literal> Parser::number()
{
    QVariant val;
    switch( d_la )
    {
    case Tok_integer:
        next();
        if( d_cur.d_val.endsWith('H') || d_cur.d_val.endsWith('h') )
            val = d_cur.d_val.left(d_cur.d_val.size()-1).toLongLong(0,16);
        else
            val = d_cur.d_val.toLongLong();
        return new Literal( Literal::Integer, d_cur.toRowCol(),val);
    case Tok_real:
        next();
        val = d_cur.d_val.toDouble();
        return new Literal( Literal::Real, d_cur.toRowCol(),val);
        break;
    default:
        syntaxError( tr("expecting a number") );
        return 0;
    }
}

Ref<Expression> Parser::qualident()
{
    // Just build the AST and record the names to be resolved; they will be resolved in the second pass
    Ref<Expression> cur;
    if( d_la == Tok_ident && peek(2) == Tok_Dot )
    {
        next(); // ident
        Ref<IdentLeaf> id = new IdentLeaf();
        id->d_name = d_cur.d_val;
        id->d_loc = d_cur.toRowCol();
        id->d_mod = d_mod.data();
        cur = id.data();
        next(); // dot
    }
    MATCH( Tok_ident, tr("expecting an identifier") );
    if( cur.isNull() )
    {
        Ref<IdentLeaf> id = new IdentLeaf();
        id->d_name = d_cur.d_val;
        id->d_loc = d_cur.toRowCol();
        id->d_mod = d_mod.data();
        cur = id.data();
    }else
    {
        Ref<IdentSel> id = new IdentSel();
        id->d_sub = cur.data();
        id->d_name = d_cur.d_val;
        id->d_loc = d_cur.toRowCol();
        cur = id.data();
    }
    return cur;
}

void Parser::identdef(Named* n, Scope* scope)
{
    MATCH( Tok_ident, tr("expecting an identifier") );
    n->d_loc = d_cur.toRowCol();
    n->d_name = d_cur.d_val;
    if( d_la == Tok_Star )
    {
        next();
        if( d_mod->d_isDef )
            warning(d_cur.toLoc(), tr("'*' ineffective in DEFINITION since all elements are public"));
        if( scope->getTag() != Thing::T_Procedure )
            n->d_visibility = Named::ReadWrite;
        else
            semanticError(d_cur.toLoc(), tr("export mark only allowed on module level"));
    }else if( d_la == Tok_Minus )
    {
        next();
        if( scope->getTag() != Thing::T_Procedure )
            n->d_visibility = Named::ReadOnly;
        else
            semanticError(d_cur.toLoc(), tr("export mark only allowed on module level"));
    }else
    {
        if( d_mod->d_isDef && scope->getTag() != Thing::T_Procedure )
            n->d_visibility = Named::ReadWrite;
        else
            n->d_visibility = Named::NotApplicable;
    }
}

void Parser::constDeclaration(Scope* scope)
{
    Ref<Const> res = new Const();
    identdef(res.data(), scope );
    MATCH( Tok_Eq, tr("expecting '=' after ident in constant declaration") );
    res->d_constExpr = constExpression();
    // this is done in Obx::Validator:
    // if( !res->d_constExpr.isNull() ) // prev errors
    //   res->d_type = res->d_constExpr->d_type.data();
    // res->d_val = eval( res->d_constExpr.data(), true );
    if( !scope->add( res.data() ) )
        semanticError( res->d_loc, tr("constant name '%1' is not unique").arg(res->d_name.constData()) );
}

Ref<Expression> Parser::constExpression()
{
    return expression();
}

static inline quint8 relation( quint16 t )
{
    switch( t )
    {
    case Tok_Eq:
        return BinExpr::EQ;
    case Tok_Hash:
        return BinExpr::NEQ;
    case Tok_Lt:
        return BinExpr::LT;
    case Tok_Leq:
        return BinExpr::LEQ;
    case Tok_Gt:
        return BinExpr::GT;
    case Tok_Geq:
        return BinExpr::GEQ;
    case Tok_IN:
        return BinExpr::IN;
    case Tok_IS:
        return BinExpr::IS;
    }
    return BinExpr::Invalid;
}

Ref<Expression> Parser::expression()
{
    Ref<Expression> lhs = simpleExpression();
    if( relation(d_la) )
    {
        Ref<BinExpr> res = new BinExpr();
        next();
        res->d_op = relation(d_cur.d_type);
        Q_ASSERT( res->d_op );
        res->d_loc = d_cur.toRowCol();
        //res->d_type = boolType();
        res->d_lhs = lhs;
        res->d_rhs = simpleExpression();
        lhs = res.data();
    }
    return lhs;
}

Ref<NamedType> Parser::typeDeclaration(Scope* scope)
{
    Ref<NamedType> nt = new NamedType();

    identdef(nt.data(),scope);
    MATCH( Tok_Eq, tr("expecting '=' after ident in type declaration") );

    if( !scope->add(nt.data()) )
        semanticError(nt->d_loc,tr("name of type declaration must be unique"));

    nt->d_type = type(scope, nt.data(), 0);

    if( !nt->d_type.isNull() )
    {
        if( nt->d_type->isSelfRef() )
            semanticError(nt->d_loc,tr("recursive type definition"));

        // NOTE: check SelfRefs when type is set. If type is pointer or procedure then there is only
        // an issue when X = POINTER TO X, but not X = POINTER TO RECORD x: X; END.
        // If type is not a pointer, then X = RECORD x: X; END is an error.
        // The following cases are already checked: X = X or X = RECORD(X)
    }
    return nt;
}

MetaParams Parser::typeParams()
{
    MATCH( Tok_Lt, tr("expecting '<' to start type parameters") );
#ifndef _HAS_GENERICS
    syntaxError(tr("this version of the parser doesn't support generic types") );
#endif
    MATCH( Tok_ident, tr("at least one identifier required as type parameter") );
    MetaParams res;
    Ref<GenericName> t = new GenericName();
    t->d_name = d_cur.d_val;
    t->d_loc = d_cur.toRowCol();
    res << t;
    while( d_la == Tok_Comma )
    {
        next();
        MATCH( Tok_ident, tr("identifier expected in type parameter list") );
        Ref<GenericName> t = new GenericName();
        t->d_name = d_cur.d_val;
        t->d_loc = d_cur.toRowCol();
        res << t;
    }
    MATCH( Tok_Gt, tr("expecting '>' to end type parameters") );
    return res;
}

Ref<Type> Parser::type(Scope* scope, Named* id, Type* binding)
{
    Q_ASSERT( ( id != 0 ) != ( binding != 0 ) ); // xor, either id or binding

    static const TokSet toks = TokSet() << Tok_Lpar << Tok_Lbrack << Tok_Hat << Tok_ARRAY << Tok_CARRAY
                                        << Tok_UNSAFE << Tok_CSTRUCT << Tok_CUNION
                                  << Tok_POINTER << Tok_PROC << Tok_PROCEDURE << Tok_RECORD << Tok_ident;
    if( d_sync )
        sync(toks);

    switch( d_la )
    {
    case Tok_ident:
        return namedType(id, binding).data();
    case Tok_Lpar:
        return enumeration(scope,id, binding);
    case Tok_ARRAY:
    case Tok_CARRAY:
    case Tok_Lbrack:
        return arrayType(scope, id, binding);
    case Tok_RECORD:
    case Tok_CSTRUCT:
    case Tok_CUNION:
        return recordType(scope,id, binding);
    case Tok_POINTER:
    case Tok_UNSAFE:
    case Tok_Hat:
        return pointerType(scope, id, binding);
    case Tok_PROCEDURE:
    case Tok_PROC:
        return procedureType(scope, id, binding);
    default:
        syntaxError( tr("expecting type"));
        break;
    }
    return 0;
}

MetaActuals Parser::typeActuals()
{
    MATCH( Tok_Lt, tr("expecting '<' to start type actuals") );
#ifndef _HAS_GENERICS
    syntaxError(tr("this version of the parser doesn't support generic types") );
#endif
    MetaActuals res;
    Ref<Type> t = typeActual();
    if( !t.isNull() )
        res << t;
    while( d_la == Tok_Comma )
    {
        next();
        t = typeActual();
        if( !t.isNull() )
            res << t;
    }
    MATCH( Tok_Gt, tr("expecting '>' to end type actuals") );
    return res;
}

void Parser::addEnum( Scope* scope, Enumeration* e, const Token& t )
{
    if( !t.isValid() )
        return;
    if( scope->find( t.d_val ) )
    {
        semanticError( t.toRowCol(), tr("name of enumeration symbol must be unique in scope") );
    }else
    {
        Ref<Const> c = new Const();
        c->d_val = e->d_items.count();
        c->d_name = t.d_val;
        c->d_loc = t.toRowCol();
        c->d_type = e;
        e->d_items.append(c);
    }
}

Ref<Type> Parser::enumeration(Scope* scope,Named* id, Type* binding)
{
    Ref<Enumeration> e = new Enumeration();
    e->d_decl = id;
    e->d_binding = binding;
    MATCH( Tok_Lpar, tr("expecting '(' to start enumeration") );
    e->d_loc = d_cur.toRowCol();
    MATCH( Tok_ident, tr("at least one identifier required in enumeration") );
    addEnum( scope, e.data(), d_cur );
    while( d_la == Tok_Comma )
    {
        next();
        MATCH( Tok_ident, tr("identifier expected after ',' in enumeration") );
        addEnum( scope, e.data(), d_cur );
    }
    MATCH( Tok_Rpar, tr("expecting ')' to end enumeration") );
    return e.data();
}

Ref<QualiType> Parser::namedType(Named* id, Type* binding)
{
    Ref<Expression> e = qualident();
    if( e.isNull() )
        return 0; // error was already reported

    Ref<QualiType> q = new QualiType();
    q->d_quali = e;
    q->d_decl = id;
    q->d_binding = binding;
    q->d_loc = e->d_loc;

    return q.data();
}

Ref<Type> Parser::arrayType(Scope* scope, Named* id, Type* binding)
{
    Ref<Array> arr = new Array();
    arr->d_decl = id;
    arr->d_binding = binding;
    QList< Ref<Expression> > dims;
    if( d_la == Tok_ARRAY || d_la == Tok_CARRAY )
    {
        if( d_la == Tok_CARRAY )
            arr->d_unsafe = true;
        next();
        arr->d_loc = d_cur.toRowCol();
        arr->d_flag = systemFlag();
        if( d_la != Tok_OF )
        {
            dims = lengthList();
        }
        MATCH( Tok_OF, tr("expecting OF after ARRAY keyword or length list") );
    }else
    {
        MATCH( Tok_Lbrack, tr("expecting '['") );
        arr->d_loc = d_cur.toRowCol();
        if( d_la != Tok_Rbrack )
        {
            dims = lengthList();
        }
        MATCH( Tok_Rbrack, tr("expecting ']'") );
    }

    Ref<Type> t = type(scope,0, arr.data());
    arr->d_type = t;

    if( !dims.isEmpty() )
    {
        arr->d_lenExpr = dims[0];
        Ref<Array> last = arr;
        for( int i = 1; i < dims.size(); i++ )
        {
            Ref<Array> cur = new Array();
            cur->d_type = t;
            cur->d_lenExpr = dims[i];
            last->d_type = cur.data();
            last = cur;
        }
        if( arr->d_unsafe && dims.size() > 1 )
            semanticError( arr->d_loc, tr("carray can only be declared with one dimension") );
    }

    return arr.data();
}

Ref<Type> Parser::recordType(Scope* scope, Named* id, Type* binding)
{
    Ref<Record> res = new Record();
    res->d_decl = id;
    res->d_binding = binding;
    switch( d_la )
    {
    case Tok_RECORD:
        MATCH( Tok_RECORD, tr("expecting the RECORD keyword") );
        break;
    case Tok_CSTRUCT:
        next();
        res->d_unsafe = true;
        break;
    case Tok_CUNION:
        next();
        res->d_unsafe = true;
        res->d_union = true;
        break;
    default:
        break;
    }

    res->d_loc = d_cur.toRowCol();
    res->d_flag = systemFlag();
    if( d_la == Tok_Lpar )
    {
        next();
        res->d_base = baseType(res.data());
        MATCH( Tok_Rpar, tr("expecting ')' after record base type") );
    }
    if( d_la != Tok_END )
        fieldListSequence( scope, res.data() );
    MATCH( Tok_END, tr("expecting END in record type") );
    return res.data();
}

Ref<Type> Parser::pointerType(Scope* scope, Named* id, Type* binding)
{
    Ref<Pointer> p = new Pointer();
    p->d_decl = id;
    p->d_binding = binding;
    if( d_la == Tok_Hat )
    {
        next();
        p->d_loc = d_cur.toRowCol();
    }else
    {
        if( d_la == Tok_UNSAFE )
        {
            next();
            p->d_unsafe = true;
        }
        MATCH( Tok_POINTER, tr("expecting the POINTER keyword") );
        p->d_loc = d_cur.toRowCol();
        p->d_flag = systemFlag();
        MATCH( Tok_TO, tr("expecting the TO keyword after the POINTER keyword") );
    }
    p->d_to = type(scope, 0, p.data() );
    return p.data();
}

Ref<Type> Parser::procedureType(Scope* scope, Named* id, Type* binding)
{
    Ref<ProcType> p = new ProcType();
    p->d_decl = id;
    p->d_binding = binding;
    if( d_la == Tok_PROC )
    {
        MATCH( Tok_PROC, tr("expecting the PROCEDURE keyword") );
    }else
    {
        MATCH( Tok_PROCEDURE, tr("expecting the PROCEDURE keyword") );
    }
    p->d_loc = d_cur.toRowCol();
    if( d_la == Tok_Lpar )
    {
        formalParameters(scope, p.data());
    }
    return p.data();
}

Ref<Type> Parser::typeActual()
{
    switch( d_la )
    {
    case Tok_ident:
        return namedType(0,0).data(); // TODO

    case Tok_integer:
    case Tok_real:
    case Tok_string:
    case Tok_hexstring:
    case Tok_hexchar:
    case Tok_NIL:
    case Tok_TRUE:
    case Tok_FALSE:
    case Tok_Lbrace:
        //return literal().data();

    default:
        syntaxError(tr("expecting type as actual type parameters"));
        break;
    }
    return 0;
}
